--- a/WebSite/docker-compose.yml
+++ b/WebSite/docker-compose.yml
@@ -15,11 +15,22 @@ services:
       - dbdata:/var/lib/mysql
       #- ./_MySQL_Init_Script:/docker-entrypoint-initdb.d
     restart: always
-
-  majorsilence.vpn.site:
+    
+  majorsilence_vpn_backgroundworker:
     image: ${DOCKER_REGISTRY-}majorsilencevpnsite
     depends_on:
       - db
+    environment:
+      ConnectionStrings__MySqlSessions: server=MariaDbServer;user=dbuser;pwd=Password123;database=VpnSessions;CharSet=utf8mb4;
+      ConnectionStrings__MySqlVpn: server=MariaDbServer;user=dbuser;pwd=Password123;database=vpndb;CharSet=utf8mb4;
+    build:
+      context: .
+      dockerfile: Majorsilence.Vpn.Site/Dockerfile
+  majorsilence_vpn_site:
+    image: ${DOCKER_REGISTRY-}majorsilencevpnsite
+    depends_on:
+      - db
+      - majorsilence_vpn_backgroundworker
     environment:
       ConnectionStrings__MySqlSessions: server=MariaDbServer;user=dbuser;pwd=Password123;database=VpnSessions;CharSet=utf8mb4;
       ConnectionStrings__MySqlVpn: server=MariaDbServer;user=dbuser;pwd=Password123;database=vpndb;CharSet=utf8mb4;
